kubernetes/apps/nextcloud/collabora/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: collabora
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: collabora
spec:
  hostnames:
    - collabora.${SECRET_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: collabora-app
          namespace: nextcloud
          port: 9980
          weight: 1
