kubernetes/apps/nextcloud/collabora/app/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: collabora
  namespace: nextcloud
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: collabora
  ingress:
    # Envoy proxy (network ns): collabora :9980 (collabora.${SECRET_DOMAIN})
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": network
            app.kubernetes.io/name: envoy
      toPorts:
        - ports:
            - port: "9980"
              protocol: TCP
    # Same namespace (nextcloud WOPI requests, languagetool sidecar hairpin)
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": nextcloud
    # Gatus health check (GET /hosting/discovery)
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": monitoring
            app.kubernetes.io/name: gatus
      toPorts:
        - ports:
            - port: "9980"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Same namespace (languagetool sidecar via ClusterIP)
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": nextcloud
    # WOPI callbacks to Nextcloud via the public domain (cloud.${SECRET_DOMAIN})
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
